[project]
name = "Well Architected"
version = "1.0.0."
authors = [
  { name="johnnyblase", email="johnnyblasin@gmail.com" },
]
description = "CDK constructs and stacks based on the Well Architected Framework"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jadecobra/well_architected"
"Bug Tracker" = "https://github.com/jadecobra/well_architected/issues"